defmt/tests/ui/fail/panic-handler-empty.stderr
error: function must have signature `fn() -> !`
 --> $DIR/panic-handler-empty.rs:5:4
  |
5 | fn foo() {}
  |    ^^^
